--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -24,7 +24,7 @@
         android:layout_below="@id/title"
         android:layout_centerInParent="true"
         android:layout_marginTop="40dp"
-
+        android:src="@drawable/logo"
         android:padding="50dp"
         android:id="@+id/img"
 
