--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e2e2a2"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:layout_centerInParent="true"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:hint="Enter Title"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:id="@+id/edOne"
+        android:background="@drawable/rounded_edittext"
+        android:layout_marginBottom="40dp"
+        android:paddingLeft="10dp"/>
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@id/edOne"
+        android:layout_centerInParent="true"
+        android:text="Search"
+        android:textColor="#ffebcd"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@drawable/rounded_btn"
+        />
+
+
+
+</RelativeLayout>
