--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_centerInParent="true"
         android:text="Search"
         android:textColor="#ffebcd"
+        android:id="@+id/search"
 
         android:background="@drawable/rounded_btn"
         />
