--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -38,7 +38,7 @@
                 android:layout_height="80dp" />
 
             <ProgressBar
-                android:id="@+id/prograss_load_photo"
+                android:id="@+id/progres"
                 style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                 android:layout_marginTop="70dp"
                 android:layout_width="match_parent"
