--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="HEADLINES"
-                android:textSize="19sp"
+                android:text="TOP HEADLINES"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:fontFamily="@font"
+                android:textColor="#FF0000"
+                android:textSize="30sp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginRight="8dp"
+
+
                 android:layout_marginTop="16dp"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
