--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -37,12 +37,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp" />
 
-            <ProgressBar
-                android:id="@+id/progres"
-                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
-                android:layout_marginTop="70dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+<!--            <ProgressBar-->
+<!--                android:id="@+id/progres"-->
+<!--                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"-->
+<!--                android:layout_marginTop="70dp"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
 
             <TextView
                 android:id="@+id/author"
