--- a/app/src/main/res/menu/menu_mine.xml
+++ b/app/src/main/res/menu/menu_mine.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/find"
         app:showAsAction="always"
+        android:icon="@drawable/search_white"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="Search"/>
 
