--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:hint="Enter Email"
         android:ems="10"
         android:textSize="16sp"
-        android:textColorHint="@color/white_pressed"
+        android:textColorHint="@color/myWhite"
         android:inputType="textEmailAddress" />
 
 
@@ -34,7 +34,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:hint="Enter Password"
-        android:textColorHint="@color/white_pressed"
+        android:textColorHint="@color/myWhite"
         android:ems="10"
         android:inputType="textPassword"
         />
@@ -42,11 +42,12 @@
     <Button
         android:id="@+id/button"
         android:background="@drawable/rounded_edittext"
-        android:textColor="@color/White"
+        android:textColor="@color/myWhite"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="150dp"
+
         android:layout_height="wrap_content"
         android:text="Sign in"
         />
@@ -54,7 +55,7 @@
     <TextView
         android:id="@+id/create"
         android:background="@drawable/rounded_edittext"
-        android:textColor="@color/White"
+        android:textColor="@color/myWhite"
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:gravity="center"
