--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -33,5 +33,16 @@
         android:ems="10"
         android:inputType="textPassword"
         />
+    <Button
+        android:id="@+id/buttonSignUp"
+        android:background="@drawable/rounded_edittext"
+        android:textColor="@color/myWhite"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Sign Up"
+        />
 
 </LinearLayout>
