--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -44,5 +44,18 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewLogin"
+        android:text="Click to Login"
+        android:layout_marginTop="30dp"
+
+        android:padding="15dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:layout_gravity="center"
+        android:textColor="@color/myWhite"/>
+
+
 
 </LinearLayout>
