--- a/app/src/main/res/menu/menu_mine.xml
+++ b/app/src/main/res/menu/menu_mine.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.globalnews.ui.MainActivity">
+    >
 
-    <item
-        android:id="@+id/find"
-        app:showAsAction="always"
-        android:icon="@drawable/search_white"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        android:title="Search"/>
+<!--    <item-->
+<!--        android:id="@+id/find"-->
+<!--        app:showAsAction="always"-->
+<!--        android:icon="@drawable/search_white"-->
+<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"-->
+<!--        android:title="Search"/>-->
 
 </menu>
