--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#b2b2b2"
+    android:background="#ffffe7"
     tools:context=".ui.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
