--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,134 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DetailActivity">
-<!--    <LinearLayout-->
-<!--        android:orientation="vertical"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:background="@color/colorPrimary">-->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.Details">
 
-<!--        <ImageView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="180dp"-->
-<!--            android:id="@+id/restaurantImageView"-->
-<!--            android:src="@drawable/waffles"-->
-<!--            android:scaleType="centerCrop" />-->
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@android:color/white"-->
-<!--            android:paddingTop="20dp"-->
-<!--            android:paddingLeft="10dp"-->
-<!--            android:paddingRight="10dp"-->
-<!--            android:paddingBottom="20dp">-->
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Restaurant Name"-->
-<!--                android:id="@+id/restaurantNameTextView"-->
-<!--                android:layout_alignParentLeft="true"-->
-<!--                android:layout_alignParentStart="true"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textColor="@color/colorPrimaryDark"-->
-<!--                android:textStyle="bold" />-->
+    <!--            <ImageView-->
+    <!--            android:id="@+id/backdrop"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:fitsSystemWindows="true"-->
+    <!--            android:scaleType="centerCrop"-->
+    <!--            app:layout_collapseMode="parallax"-->
+    <!--            android:transitionName="img"-->
+    <!--            tools:ignore="UnusedAttribute" />-->
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="4.5/5"-->
-<!--                android:id="@+id/ratingTextView"-->
-<!--                android:layout_alignTop="@+id/restaurantNameTextView"-->
-<!--                android:layout_alignParentRight="true"-->
-<!--                android:layout_alignParentEnd="true"-->
-<!--                android:textColor="@color/colorAccent"-->
-<!--                android:textStyle="bold" />-->
+    <RelativeLayout
+        android:id="@+id/headerContent"
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Brunch, American"-->
-<!--                android:id="@+id/cuisineTextView"-->
-<!--                android:layout_below="@+id/restaurantNameTextView"-->
-<!--                android:layout_alignParentLeft="true"-->
-<!--                android:layout_alignParentStart="true"-->
-<!--                android:textColor="@color/colorSecondaryText"-->
-<!--                android:textStyle="italic" />-->
-<!--        </RelativeLayout>-->
+        android:fitsSystemWindows="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
+        <ImageView
+            android:id="@+id/img"
 
-<!--            <LinearLayout-->
-<!--                android:orientation="vertical"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_alignParentTop="true"-->
-<!--                android:layout_alignParentLeft="true"-->
-<!--                android:layout_alignParentStart="true"-->
-<!--                android:layout_above="@+id/saveRestaurantButton"-->
-<!--                android:paddingLeft="30dp"-->
-<!--                android:paddingTop="20dp"-->
-<!--                android:paddingRight="30dp">-->
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="70dp" />
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="View on Yelp"-->
-<!--                    android:id="@+id/websiteTextView"-->
-<!--                    android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"-->
-<!--                    android:drawablePadding="4dp"-->
-<!--                    android:textColor="@color/colorTextIcons"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:layout_marginBottom="10dp"-->
-<!--                    android:gravity="center" />-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="(503) 223-1282"-->
-<!--                    android:id="@+id/phoneTextView"-->
-<!--                    android:drawableLeft="@drawable/ic_local_phone_white_24dp"-->
-<!--                    android:drawablePadding="4dp"-->
-<!--                    android:textColor="@color/colorTextIcons"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:layout_marginBottom="10dp"-->
-<!--                    android:gravity="center"/>-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="123 SW Best Ever Ave. Portland, Oregon, 97222"-->
-<!--                    -->
-<!--                    android:drawablePadding="4dp"-->
-<!--                    android:id="@+id/addressTextView"-->
-<!--                    android:textColor="@color/myWhite"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:layout_marginBottom="10dp"-->
-<!--                    android:gravity="center_vertical"/>-->
+        <ImageView
+            android:layout_alignParentBottom="true"
 
-<!--            </LinearLayout>-->
+            android:id="@+id/img2"
+            android:layout_alignBottom="@id/img"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="80dp" />
 
-<!--            <Button-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Save Restaurant"-->
-<!--                android:id="@+id/saveRestaurantButton"-->
-<!--                android:layout_alignParentBottom="true"-->
-<!--                android:background="@color/colorAccent"-->
-<!--                android:textColor="@color/myWhite"-->
-<!--                android:textSize="15sp" />-->
-<!--        </RelativeLayout>-->
-<!--    </LinearLayout>-->
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/title_appbar"
+        android:clickable="false"
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/title_on_appbar"
+            style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:text="News for you"
+            android:textSize="18dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:drawablePadding="10dp"
+            android:singleLine="true"
+            android:ellipsize="end"/>
+
+        <TextView
+            android:id="@+id/subtitle_on_appbar"
+            style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+            android:text="Subtitle"
+            android:textSize="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:drawablePadding="10dp"
+            android:singleLine="true"
+            android:ellipsize="end"/>
+
+    </LinearLayout>
+
+    <ScrollView
+
+        android:fitsSystemWindows="true"
+        android:layout_width="match_parent"
+        android:background="@color/colorBackground"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView
+
+                android:layout_width="match_parent"
+                app:cardCornerRadius="0dp"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/title"
+                        android:textColor="@color/colorTextTitle"
+                        android:textStyle="bold"
+                        android:fontFamily="sans-serif-light"
+                        android:textSize="19sp"
+                        android:text="Title of News"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+
+                    <TextView
+                        android:id="@+id/time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_below="@id/title"
+                        android:layout_marginTop="10dp"
+                        android:maxLines="1"
+                        android:drawablePadding="10dp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:text="a time ago" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/author"/>
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                app:cardCornerRadius="0dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+
+                    <!--                        <WebView-->
+
+                    <!--                            android:id="@+id/webView"-->
+                    <!--                            android:layout_width="match_parent"-->
+                    <!--                            android:layout_height="match_parent"/>-->
+
+
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/date_behavior"
+
+
+        android:adjustViewBounds="true"
+        app:layout_anchorGravity="right|end|bottom"
+        android:clickable="false"
+        android:layout_below="@id/img"
+
+        android:layout_width="wrap_content"
+        android:padding="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="410dp"
+        android:layout_height="wrap_content"
+        tools:ignore="UnusedAttribute">
+        <ImageView
+
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"/>
+        <TextView
+            android:textColor="#606060"
+            android:id="@+id/date"
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="10dp"
+            android:text="01 January 1990"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
 
 </FrameLayout>
