--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -8,6 +8,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="11dp"
@@ -37,12 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp" />
 
-<!--            <ProgressBar-->
-<!--                android:id="@+id/progres"-->
-<!--                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"-->
-<!--                android:layout_marginTop="70dp"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
+
 
             <TextView
                 android:id="@+id/author"
@@ -101,6 +97,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:text="Title"
+
                 android:textSize="17sp"
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/img"
