--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -130,7 +130,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/author"/>
+                        android:id="@+id/author"
+                        android:layout_below="@id/title"/>
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -147,6 +148,11 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/descrip"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"/>
 
 
 
