add search item

--- a/app/src/main/res/menu/log_out.xml
+++ b/app/src/main/res/menu/log_out.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.globalnews.ui.MainActivity">
 <item
     android:id="@+id/signOut"
     android:title="Logout"/>
+
+        <item
+            android:id="@+id/find"
+            app:showAsAction="always"
+            android:icon="@drawable/search_white"
+            app:actionViewClass="androidx.appcompat.widget.SearchView"
+            android:title="Search"/>
 </menu>
