--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffcd"
     tools:context=".ui.Splash">
+<!--    #ffffcd-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
