--- a/app/src/main/res/drawable/gradient_two.xml
+++ b/app/src/main/res/drawable/gradient_two.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
     <gradient
         android:startColor="#3D5069"
-        android:centerColor="#ff9336"
-        android:endColor="#ff9336"
+        android:centerColor="#00A0E5"
+        android:endColor="#00A0E5"
         android:angle="90"/>
     <corners
-        android:radius="0dp"/>
+        android:radius="10dp"/>
 </shape>
