--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradient"
+    android:background="@drawable/gradient_two"
     tools:context=".ui.CreateAccount">
     <EditText
         android:layout_width="250dp"
@@ -18,7 +18,7 @@
         android:gravity="center"
         android:hint="Email"
         android:ems="10"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textColorHint="@color/myWhite"
         android:inputType="textEmailAddress" />
     <EditText
